--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "bd-my-app",
   "version": "1.0.0",
+  "scripts": {
+    "dev": "ts-node src/server.ts",
+    "build": "tsc && node dist/server.js"
+  },
   "main": "index.js",
   "repository": "git@github.com:Zhurkin-Alex/bd-my-app.git",
   "author": "Zhurkin-Alex <jura-leha-999@mail.ru>",
